<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hive_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nottoobee.toobee.smarthive.HiveInfo">

    <include
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/include" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layer_5"
        android:layout_below="@+id/include"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="60dp"
        android:id="@+id/relativeLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/hive_green"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/imageView" />

        <TextView
            android:text="@string/hive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:id="@+id/textView4"
            android:textSize="26sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/temperature"
            android:layout_width="wrap_content"
            android:layout_below="@id/textView4"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="50dp"
            android:id="@+id/textView5"
            android:textAlignment="center"
            android:layout_alignEnd="@+id/textView7" />

        <TextView
            android:text="18° C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:textColor="@color/bad"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="75dp"
            android:layout_marginTop="50dp"
            android:id="@+id/textView6" />

        <TextView
            android:text="@string/last_inspection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView5"
            android:layout_marginStart="75dp"
            android:layout_marginTop="25dp"
            android:id="@+id/textView7" />

        <TextView
            android:text="4 days ago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/ok"
            android:layout_below="@id/textView5"
            android:layout_marginEnd="75dp"
            android:layout_marginTop="25dp"
            android:id="@+id/textView8" />

        <TextView
            android:text="@string/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView7"
            android:layout_marginStart="75dp"
            android:layout_marginTop="25dp"
            android:id="@+id/textView9"
            android:layout_alignEnd="@+id/textView7" />

        <TextView
            android:text="91 kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView7"
            android:textColor="@color/good"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="75dp"
            android:id="@+id/textView10" />

        <TextView
            android:text="@string/population"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView9"
            android:layout_marginTop="25dp"
            android:id="@+id/textView11"
            android:layout_alignEnd="@+id/textView9" />

        <TextView
            android:text="56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView9"
            android:textColor="@color/bad"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="75dp"
            android:id="@+id/textView12" />


    </RelativeLayout>

</RelativeLayout>
